--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     .container {
       max-width: 700px;
       margin-top: 50px;
-      background-color: #fff;
+      background-color: #86B1BF;
       border-radius: 12px;
       padding: 30px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
